--- a/stylesheet.css
+++ b/stylesheet.css
@@ -54,6 +54,7 @@ div {
 }
 
 a {
+    text-decoration: underline;
     font-weight: 600;
 }
 
@@ -171,20 +172,29 @@ header {
 .sidebyside-maindiv {
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     padding: 16px 0px;
     margin: 24px 0px;
 }
 
 .sidebyside-div1 {
     order: 0;
+    margin: auto;
 }
 
 .sidebyside-div2 {
     position: relative;
-    padding-bottom: calc(var(--aspect-ratio, 0.5625) * 100%);
-    margin: 4% 0%;
-    height: 0;
     order: 1;
+    margin: auto;
+}
+
+.sidebyside-div2 img {
+    width: 300px;
+}
+
+.sidebyside-div1 img {
+    width: 300px;
+    align-content: center;
 }
 
 
@@ -964,10 +974,14 @@ footer h3 {
     .sidebyside-div2 {
         order: 1;
         position: relative;
-        padding-bottom: 0;
-        /* 16:9 */
-        height: fit-content;
-        margin: auto;
+        width: 100%;
+        margin: 0px 0px 100px 0px;
+    }
+    .sidebyside-div2 img {
+        width: 560px;
+    }
+    .sidebyside-div1 img {
+        width: 560px;
     }
     .homeCards a {
         color: #191b1a;
